<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.dthang.myapp.customview.EditTextUserName
                android:id="@+id/ed_user"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title_edt_username"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <com.dthang.myapp.customview.EditTextPassWord
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_edt_password"
                android:textColor="@color/colorBlack"
                app:attr="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:text="Quên mật khẩu"
            android:textColor="#27eae7" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_bt_login"
            android:text="@string/title_bt_login"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="Hoặc" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/colorGray" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_login_withsms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:selectableItemBackground"
            android:background="@drawable/bg_bt_login_withsms"
            android:text="@string/title_bt_login_withsms"
            android:textColor="@color/colorOrange" />

        <Button
            android:id="@+id/bt_login_withfacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_bt_login_withfacebook"
            android:drawableLeft="@drawable/icon_fb"
            android:padding="2dp"
            android:text="@string/title_bt_login_withfacebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/bt_login_withgoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_bt_login_withgoogle"
            android:drawableLeft="@drawable/icon_google"
            android:padding="2dp"
            android:text="@string/title_bt_login_withgoogle"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</RelativeLayout>